--- a/index.html
+++ b/index.html
@@ -414,8 +414,13 @@
                     </ul>
                 </div>
 
-                <div class="col-md bg-dark">
-
+                <div id="mapBox" class="mapBox col-md" 
+                data-lat="40.701083" 
+                data-lon="-74.1522848" 
+                data-zoom="13" 
+                data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
+                data-mlat="40.701083"
+                data-mlon="-74.1522848">
                 </div>
 
 
@@ -469,6 +474,10 @@
 
 
     <script src="bootstrap5/js/bootstrap.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+    <script src="js/gmap.min.js"></script>
+    <script src="js/google-map.js"></script>
 </body>
 
 </html>
